# robotis_mini

./: README.md
robotis_mini/: CMakeLists.txt  package.xml
robotis_mini_control/: CMakeLists.txt
robotis_mini_control/config/: controllers.yaml  hardware.yaml  robotis_mini_control.yaml  robotis_mini_name_joint.yaml
robotis_mini_control/include/robotis_mini_hardware_interface/: robotis_hardware_interface.h  robotis_mini_hardware.h
robotis_mini_control/launch/: control.launch  load_param.launch  robotis_mini_position_controllers.launch
robotis_mini_control/scripts/: test.py  walker_demo.py
robotis_mini_control/src/: robotis_hardware_interface.cpp  robotis_mini_hardware_interface_node.cpp
robotis_mini_control/src/robotis_mini_control/: commande_darwin.cpp  data.old..txt  data.txt  main.cpp  poppy_node.py  poppy_node_original.py  send_joint_pos.cpp  test.py  test.txt  topic_trans.cpp
robotis_mini_control/src/robotis_mini_control/lib/: .DarwinCallback.cpp.swp  .DarwinCallback.h.swp  .DarwinMess.cpp.swp  .DarwinMess.h.swp  DarwinCallback.cpp  DarwinCallback.h  DarwinJoint.cpp  DarwinJoint.h  DarwinJointControl.cpp  DarwinJointControl.h  DarwinMess.cpp  DarwinMess.h  DarwinReadFile.cpp  DarwinReadFile.h
robotis_mini_description/: CMakeLists.txt  package.xml
robotis_mini_description/launch/: display.launch  display_real.launch  robotis_mini.launch
robotis_mini_description/rviz/: robotis_mini.rviz
robotis_mini_description/urdf/: base.urdf.xacro  body.urdf.xacro  common.urdf.xacro  common.urdf.xacro~  gazebo.xacro  hand.urdf.xacro  leg.urdf.xacro  robotis_mini.urdf.xacro  servo.urdf.xacro~
robotis_mini_gazebo/launch/: gazebo.launch
robotis_mini_gazebo/worlds/: empty.world
